# RNN-JAX

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
cells/: __init__.py  antisymmetric.py  base.py  cornn.py  gated.py  lipschitz.py  lstm.py  obscillator.py  unitary.py  urnn.py  vanilla.py
examples/: adding_problem.ipynb  benchmark_clockwork.ipynb  benchmark_lstm.ipynb  char_rnn.ipynb  dynamical_system_forecasting.ipynb
examples/ benchmarks/: benchmark_clockwork.ipynb  benchmark_lstm.ipynb
layers/: __init__.py  rnn.py
rnn_jax/: __init__.py
rnn_jax/cells/: __init__.py  _antisymmetric.py  _base.py  _clockwork.py  _exp_rnn.py  _gated.py  _lipschitz.py  _obscillator.py  _unitary.py  _vanilla.py  antisymmetric.py  base.py  clockwork.py  exp_rnn.py  gated.py  lipschitz.py  obscillator.py  unitary.py  vanilla.py
rnn_jax/datasets/: __init__.py  cifar10.py  smnist.py
rnn_jax/graph/: message.py  mpnn.py
rnn_jax/layers/: __init__.py  _autoregressive.py  _encoder.py  _modular.py  _reservoir.py  _rnn.py  encoder.py  reservoir.py  rnn.py
rnn_jax/parallel/: parallel_example.py  parallelize.py
rnn_jax/ssm/: __init__.py  _base.py  _lru.py  _mixers.py  _models.py  _s5.py  base.py  lru.py  mixers.py  models.py  s5.py
rnn_jax/tests/: test_datasets.py  test_imports.py  test_rnn.py  test_ssm.py  test_stack.py  test_transformers.py
rnn_jax/transformer/: __init__.py  _linear_attention.py
rnn_jax/utils/: utils.py
scripts/: build_rnn_jax.sh
tests/: test_stack.py
utils/: utils.py
(+5 files in other folders)
