[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnn-jax"
version = "0.0.1"
description = "Implementation of various flavours of recurrent neural networks in Jax and Equinox"
readme = "README.md"
authors = [ { name = "Giacomo Lagomarsini" } ]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jax>=0.8.0",
    "equinox>=0.13.2",
    "optax",
    "matplotlib",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm",
    "jupyter>=1.0.0"
]
keywords = ["rnn", "jax", "equinox", "recurrent-neural-networks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "ruff",
  "isort",
  "mypy",
]


[tool.setuptools]
packages = { find = {} }
